# XJTU-RM-TASK05-LIN

./: README.md  check_image_topic.py  test_chessboard.py
src/hik_camera/: CMakeLists.txt  package.xml
src/hik_camera/ArmorDetector/data/: calibration_params.yml
src/hik_camera/ArmorDetector/include/: ArmorDetector.h  CameraCalibrator.h  NeuralNetwork.h  PnPSolver.h
src/hik_camera/ArmorDetector/python_scripts/: convert_to_onnx.py  train_resnet.py
src/hik_camera/ArmorDetector/src/: ArmorDetector.cpp  CameraCalibrator.cpp  NeuralNetwork.cpp  PnPSolver.cpp  camera_calibration.cpp  main_armor_detection.cpp
src/hik_camera/config/: params.yaml
src/hik_camera/include/hik_camera/: hik_camera.hpp
src/hik_camera/launch/: armor_detection.launch.py  hik_camera.launch.py  photo_capture.launch.py
src/hik_camera/scripts/: take_photos.py
src/hik_camera/src/: hik_camera_node.cpp
